# marian-translate-pipeline-onnx

./: .gitignore  README.md  pyproject.toml  requirements.txt
huggingface_onnx/pipeline/: __init__.py  config.py  translation.py
onnx_backend/pipeline/: __init__.py  config.py  translation.py
onnx_backend/utils/: __init__.py  debug.py
playground/: 01_hf_onnx_decode.py  02_hf_onnx_decode_with_past.py  03_marian_tokenizer_demo.py  04_marian_tokenizer_onnx_ru_en.py  05_marian_tokenizer_onnx_en_ru.py
sentencepiece_backend/marian/: __init__.py  config.py  tokenizer.py
